# bgustdown

./: .gitignore  CONTRIBUTING.md  CREDITS.md  Cargo.toml  LICENSE  README.md  README_CRATES.md  SKILL.md  build.rs  index.js  package.json
bgustdown/: Cargo.toml  README.md  bgustdown-0.1.0.tgz  bgustdown-0.1.1.tgz  cli.js  package-lock.json  package.json
bgustdown-landing/src/app/: page.tsx
bgustdown/src/: lib.rs
docs/: RELEASE_GUIDELINES.md  api_reference.md  architecture.md  development.md  installation.md  troubleshooting.md
docs/crates/: Cargo.toml  README.md
docs/npm/: README.md  package.json
docs/skill/: install_skill.sh
src/: lib.rs  ocr.rs  text_utils.rs
src/converters/: csv_conv.rs  dataset_builder.rs  docx.rs  excel.rs  odt.rs  pdf_conv.rs
