[package]
name = "bgustdown"
version = "0.2.0"
edition = "2021"
authors = ["B-GUST <augustbenitogroup@gmail.com>"]
license-file = "LICENSE"
description = "High-performance document-to-markdown & NLP dataset engine in Rust with NAPI-RS bindings."
repository = "https://github.com/B-GUST/bgustdown"
homepage = "https://bgustdown.lat"
documentation = "https://bgustdown.lat"
keywords = ["markdown", "nlp", "ocr", "arrow", "converter"]
categories = ["text-processing", "parser-implementations"]

[lib]
crate-type = ["rlib", "cdylib"]

[workspace]

[dependencies]
napi = { version = "2.12", features = ["async"] }
napi-derive = "2.12"
calamine = "0.24"
quick-xml = "0.31"
lopdf = "0.32"
zip = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
arrow = { version = "58.3.0", default-features = false, features = ["csv"] }
arrow-array = "58.3.0"
arrow-schema = "58.3.0"
arrow-cast = "58.3.0"
chrono = "0.4.38"
pdf-extract = "0.7"
bgustreadimg = { path = "../bgustreadimg", version = "0.2.0", features = ["onnx"] }
tokenizers = "0.21"
image = "0.25"
regex = "1.10"

[build-dependencies]
napi-build = "2.0"
