[package]
name = "bgustdown"
version = "0.1.2"
edition = "2021"
authors = ["B-GUST <augustbenitogroup@gmail.com>"]
license = "MIT"
description = "High-performance document-to-markdown & NLP dataset engine in Rust with NAPI-RS bindings."
repository = "https://github.com/B-GUST/bgustdown"
homepage = "https://bgustdown.lat"
documentation = "https://bgustdown.lat"
keywords = ["markdown", "nlp", "ocr", "arrow", "converter"]
categories = ["text-processing", "parser-implementations"]

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12", features = ["async"] }
napi-derive = "2.12"
calamine = "0.24"
quick-xml = "0.31"
lopdf = "0.32"
zip = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
arrow = { version = "53.0", default-features = false, features = ["csv"] }
arrow-array = "53.0"
arrow-schema = "53.0"
arrow-cast = "53.0"
chrono = "0.4.38"
pdf-extract = "0.7"
candle-core = "0.8"
candle-transformers = "0.8"
tokenizers = "0.21"
image = "0.25"
regex = "1.10"

[build-dependencies]
napi-build = "2.0"
